# WrappedSQL

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
wrappedsql/: __init__.py  connection.py  cursor.py  database.py
