[metadata]
name = WrappedSQL
version = 0.0.1
author = Émilia Decaudin
author_email = me@edecaud.in
description = Simple wrappers around SQL database connections, for scripting.
long_description = file: README.md
license = MIT
license_file = LICENSE
url = https://github.com/emiliadecaudin/WrappedSQL
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Topic :: Database

[options]
packages = find:
install_requires = PyMySQL
python_requires = >=3.9